--- a/.github/workflows/docker-ghcrio.yml
+++ b/.github/workflows/docker-ghcrio.yml
@@ -42,7 +42,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
         with:
           driver-opts: |
-            image=moby/buildkit:v0.11
+            image=moby/buildkit:v0.11.0
           buildkitd-flags: --debug
       -
         name: Login to GitHub Container Registry
@@ -60,4 +60,4 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/armhf
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            ghcr.io/finchsec/kali:latest
+            ghcr.io/namratajha/kali:latest
