--- a/.github/workflows/docker-ghcrio.yml
+++ b/.github/workflows/docker-ghcrio.yml
@@ -10,8 +10,6 @@ on:
       - '!docker/README.md'
       - '!docker/docker-README.md'
       - '!docker/Dockerfile.sshd'
-  schedule:
-    - cron: '0 0 * * *'
   workflow_dispatch:
   pull_request:
     branches:
@@ -54,10 +52,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Build and push
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v3.2.0
         with:
           context: "{{defaultContext}}:docker"
-          platforms: linux/amd64,linux/arm64,linux/armhf
+          platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
             ghcr.io/namratajha/kali:latest
