--- a/docker/Dockerfile.sshd
+++ b/docker/Dockerfile.sshd
@@ -4,4 +4,4 @@ LABEL org.opencontainers.image.authors="namratajha@github.com"
 
 RUN apt-get update 
 RUN apt-get install –y nginx 
-CMD [“echo”,”Image created”] 
+CMD ['echo','Image created'] 
