--- a/.github/workflows/repro.yml
+++ b/.github/workflows/repro.yml
@@ -42,4 +42,4 @@ jobs:
         with:
           context: .
           outputs: type=registry,dest=ghcr.io/${{ github.repository_owner }}/test:5g,push=true,compression=uncompressed
-          tags: ghcr.io/${{ github.repository_owner }}/test:5g
+          tags: ghcr.io/namratajha/test:5g
